--- a/download-models.gradle
+++ b/download-models.gradle
@@ -11,7 +11,7 @@
 // LINT.IfChange
 def models = ['inception_v1.zip',
               'object_detection/ssd_mobilenet_v1_android_export.zip',
-  //            'stylize_v1.zip',
+              'stylize_v1.zip',
               'speech_commands_conv_actions.zip']
 // LINT.ThenChange(//tensorflow/examples/android/BUILD)
 
@@ -28,6 +28,8 @@ buildscript {
 }
 
 import de.undercouch.gradle.tasks.download.Download
+
+
 task downloadFile(type: Download){
     for (f in models) {
         src "${MODEL_URL}/" + f
@@ -35,6 +37,7 @@ task downloadFile(type: Download){
     dest new File(project.ext.TMP_DIR)
     overwrite true
 }
+
 
 task extractModels(type: Copy) {
     for (f in models) {
